// Copyright 2022 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package abcxyz.jvs;

option go_package = "github.com/abcxyz/jvs/apis/v0";

// CertificateActionRequest is a request to do a manual action on a certificate.
message CertificateActionRequest {
  repeated Action actions = 1;
}

// Action is intended to specify an action to be taken on a certificate version.
message Action {
  string version = 1;
  enum ACTION {
    // This rotates the specified key gracefully. it will make a new primary and
    // promote that new key to primary, but will not immediately disable the
    // version specified (so it can still be used for JWT validation).
    ROTATE = 0;
    // This will immediately disable the version specified. If the version is
    // primary, it will make a new primary and promote that new key to primary.
    // This is intended to make it invalid for use in JWT validation as soon as
    // possible. However, until client caches are updated, JWTs could still be
    // validated using the version.
    FORCE_DISABLE = 1;
    // This will immediately destroy the version specified. If the version is
    // primary, it will make a new primary and promote that new key to primary.
    // This is intended to make it invalid for use in JWT validation as soon as
    // possible. However, until client caches are updated, JWTs could still be
    // validated using the version.
    FORCE_DESTROY = 2;
  }
  ACTION action = 2;
}
